--- a/pack-jhipster/celerio/pack-jhipster/src/main/webapp/app/layouts/navbar/navbar.p.vm.html
+++ b/pack-jhipster/celerio/pack-jhipster/src/main/webapp/app/layouts/navbar/navbar.p.vm.html
@@ -1,3 +1,4 @@
+$output.webapp("app/layouts/navbar/navbar.html")##
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -18,7 +19,7 @@
                     </a>
                 </li>
                 <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
-                <li ng-class="{active: vm.$state.includes('entity')}" ng-switch-when="true" uib-dropdown class="dropdown pointer">
+                <li ng-class="{active: vm.${dollar}state.includes('entity')}" ng-switch-when="true" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="entity-menu">
                         <span>
                             <span class="glyphicon glyphicon-th-list"></span>
@@ -29,22 +30,17 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu" uib-dropdown-menu>
+#foreach($entity in $project.withoutManyToManyJoinEntities.list)
                         <li ui-sref-active="active" >
-                            <a ui-sref="author" ng-click="vm.collapseNavbar()">
+                            <a ui-sref="${entity.model.var}" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                <span translate="global.menu.entities.author">Author</span>
+                                <span translate="global.menu.entities.${entity.model.var}">${entity.model.type}</span>
                             </a>
                         </li>
-                        <li ui-sref-active="active" >
-                            <a ui-sref="book" ng-click="vm.collapseNavbar()">
-                                <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                <span translate="global.menu.entities.book">Book</span>
-                            </a>
-                        </li>
-                        <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
+#end
                     </ul>
                 </li>
-                <li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">
+                <li ng-class="{active: vm.${dollar}state.includes('account')}" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">
                         <span>
                             <span class="glyphicon glyphicon-user"></span>
@@ -93,7 +89,7 @@
                         </li>
                     </ul>
                 </li>
-                <li ng-class="{active: vm.$state.includes('admin')}"  ng-switch-when="true" has-authority="ROLE_ADMIN" uib-dropdown class="dropdown pointer">
+                <li ng-class="{active: vm.${dollar}state.includes('admin')}"  ng-switch-when="true" has-authority="ROLE_ADMIN" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="admin-menu">
                         <span>
                             <span class="glyphicon glyphicon-tower"></span>
